# async_trait_example

./: Cargo.toml  README.md  result.txt
src/: main.rs  provider.rs
